fix about page z-index problem

--- a/css/about.css
+++ b/css/about.css
@@ -16,23 +16,26 @@ html, body {
   height: 260px;
   width: 600px;
   display: grid;
-  grid-template-columns: 50% 1fr 2fr; 
-  grid-template-rows: 1fr 2fr 2fr 2fr 8fr 2fr;
+  grid-template-columns: 50% 2fr 3fr; 
+  grid-template-rows: 1fr 2fr 2fr 2fr 2fr 6fr 2fr;
   grid-gap: 10px 15px;
+}
+
+.cell {
+  z-index: 1;
 }
 
 .kanban {
   grid-column: 1; 
   grid-row: 1 / span 6;
-  z-index: 10;
 }
 
 .description_val{
   grid-column: 2 / span 2; 
-  grid-row: 5;   
+  grid-row: 6;   
 }
 
 .copyright_val{
   grid-column: 2 / span 2; 
-  grid-row: 6;   
+  grid-row: 7;   
 }
