--- a/css/history.css
+++ b/css/history.css
@@ -1,3 +1,8 @@
+#main-history-wrap{
+    background: white;
+}
+
 .main-history{
-    background: #f5f5f1;
+    margin: 0 auto;
+    width: 960px;
 }
